[package]
name = "unvesys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
colored = "2.0.0"
csv = "1.2.2"
hard-xml = "1.25.0"
petgraph = "0.6.3"
serde = { version = "1.0.174", features = ["derive"]}
serde_yaml = "0.9.25"
xlsxwriter = "0.6.0"
