[package]
name = "unvesys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1"

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
colored = "2.0.0"
csv = "1.2.2"
eframe = "0.27.2"
# eframe = { path = "../egui/crates/eframe", features = [
#     "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
# ] }
ecolor = "0.23.0"
egui = "0.27.2"

#egui = { path = "../egui/crates/egui"}

# egui = { git = "https://github.com/konkitoman/egui.git", branch = "multiples_viewports" }

rfd = "0.12.0"
process_path = "0.1.4"
rand = "0.8.5"
env_logger = "0.10.0"
hard-xml = "1.25.0"
petgraph = "0.6.3"
serde = { version = "1.0.174", features = ["derive"]}
serde_json = "1.0.104"
serde_yaml = "0.9.25"
xlsxwriter = "0.6.0"

[target.'cfg(windows)'.dependencies] 
winreg = "0.51"
native-dialog = "0.7.0"
simple_tables = "0.3.0"
egui-data-table = "0.2.2"


